Fix missing logo in embeds on Safari

--- a/src/components/EmbedWrapper.module.scss
+++ b/src/components/EmbedWrapper.module.scss
@@ -7,6 +7,7 @@
 
   .logo {
     width: 250px;
+    height: 100%;
   }
 
   .buttonWrap {
